--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,6 +5,8 @@
 <!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
+  <meta name="google-site-verification" content="lzP9LNU4PdxL3utC6GN-FgiDN4zwz9KshqqxBYALdXY" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     {% if settings.favicon_enable %}
@@ -19,7 +21,9 @@
     {% include 'header-stylesheets' %}
     {% include 'header-scripts' %}
     {{ content_for_header }}
-<!-- Hits Analytics tracking code -->
+ 
+
+ <!-- Hits Analytics tracking code -->
 {% if shop.customer_accounts_enabled %}
   {% if customer %}
     <script type="text/javascript">
