--- a/templates/page.charity.liquid
+++ b/templates/page.charity.liquid
@@ -9,17 +9,17 @@
 <!-- Charity Stats -->
 <div class="container"> 
   <div class="row">
-    <h2 class="text-center">
+    <h1 class="text-center">
       Devoted To Change
-    </h2>
+    </h1>
   </div>
 
   <div class="row">
-    <h5 class="text-center col-md-8 col-md-offset-2">
+    <h4 class="text-center col-md-8 col-md-offset-2">
       Fello was founded with a dedication to support those in need.
       We are humbled by the opportunity to work with VOSH International,
       a purposeful organization committed to providing eye care around the world.
-    </h5>
+    </h4>
   </div>
   
   <div class="charity-stats">
@@ -39,7 +39,7 @@
     
     <div class="row row-eq-height hidden-sm hidden-xs">
       <div class="col-md-2 col-md-offset-2 v-center">
-        <p class="h1 highlight">1 <small>in</small> 7</p>
+        <p class="h1 highlight v-center">1 <small>in</small> 7</p>
       </div>
 
       <div class="col-md-6 v-center">
@@ -70,7 +70,7 @@
 
     <div class="row row-eq-height hidden-sm hidden-xs">
       <div class="col-md-2 col-md-offset-2 v-center">
-        <p class="h1 highlight">153</p>
+        <p class="h1 highlight v-center">153</p>
       </div>
 
       <div class="col-md-6 v-center">
@@ -102,7 +102,7 @@
 
     <div class="row row-eq-height hidden-sm hidden-xs">
       <div class="col-md-2 col-md-offset-2 v-center hidden-sm hidden-xs">
-        <p class="h1 highlight">$5.00</p>
+        <p class="h1 highlight v-center">$5.00</p>
       </div>
 
       <div class="col-md-6 v-center">
