--- a/snippets/header-scripts.liquid
+++ b/snippets/header-scripts.liquid
@@ -12,7 +12,7 @@
 
 
 <script src="{{ "option_selection.js" | shopify_asset_url }}" async></script>
-<script src="{{ "currencies.js" | shopify_asset_url }}" async></script>
+{{ "//cdn.shopify.com/s/javascripts/currencies.js" | script_tag }}
 <script src="{{ "jquery.currencies.min.js" | asset_url }}" async></script>
 <script src="{{ "jquery.storageapi.min.js" | asset_url }}" async></script>
 
