--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -22,10 +22,10 @@
   <div class="product-inner">
     <div class="product-thumb has-back-image white-bg">
       
-      <a href="{{ product.url | within: collection }}"><img src="{{ product.featured_image.src | img_url: 'grande' }}" alt="{{ product.featured_image.alt | escape }}"></a>
+      <a href="{{ product.url | within: collection }}"><img class="full-w" src="{{ product.featured_image.src | img_url: 'grande' }}" alt="{{ product.featured_image.alt | escape }}"></a>
       {% if settings.use_second_img %}
         {% if product.images.size > 1 %}
-      		<a class="back-image" href="{{ product.url | within: collection }}">{{product.images[1].src |img_url: 'grande'| img_tag: product.title }}</a>
+      		<a class="back-image" href="{{ product.url | within: collection }}">{{product.images[1].src |img_url: 'grande'| img_tag: product.title, 'full-w' }}</a>
         {% endif %}
       {% endif %}
 
@@ -67,6 +67,7 @@
           {% endif %}
         </div>
       {% else %}
+        <hr />
 		<a class="button btn-sold-out" onclick="location.href='{{ product.url | within: collection }}'">{{'products.product.sold_out' | t | upcase }}</a>
       {% endif %}
     </div>
