--- a/snippets/sold-out.liquid
+++ b/snippets/sold-out.liquid
@@ -1,4 +1,4 @@
-<div class="newsletter {% if newsletter == 'center' %}center{% endif %}">
+<div class="newsletter-sold-out">
   {% if settings.mailchimp_link != blank %}
     <form action="{{ settings.mailchimp_link }}" method="post" name="mc-embedded-subscribe-form" class="contact-form" target="_blank">
       {% comment %}
@@ -10,6 +10,7 @@
          width: inherit;
       " type="submit" value="Send" class=" sold-old-button action_button sign_up" name="subscribe" />
     </form>
+  
   {% else %}    
     {% form 'customer' %}
        {% if form.posted_successfully? %}
@@ -27,7 +28,10 @@
        <input type="hidden" name="contact[last_name]" value="{{ 'general.newsletter_form.subscriber_last_name' | t }}" />
        {% endif %}
        <input type="email" class="sold-out-form contact_email" name="contact[email]" required pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}" placeholder="Email me when available..." />
-       <input style="
+
+  <p></p>
+  
+  <input style="
          width: inherit;
        " type='submit' class="action_button sign_up" value="Send" />
      {% endform %}
