--- a/templates/page.collaborations.liquid
+++ b/templates/page.collaborations.liquid
@@ -1,19 +1,15 @@
 <h1 class="text-center jumbotron section-header__title no-margin blue-bg">Work With Fello</h1>
 
 <div class="med-v-pads container">
-  <h2 class="text-center">
-    COLLABORATE
+  <h2 class="text-center med-h-pads hidden-xs hidden-sm">
+    Email us at <span class="highlight">contact@felloeyewear.com</span> to Collaborate
   </h2>
-
-  <hr class="highlight" />
-
-  <h4 class="hidden-xs text-center med-h-pads">
-    If you are interested in collaborating in any way please contact us at <span class="highlight">contact@felloeyewear.com</span>.
-    If you want to make some extra money, ask about our <strong>Ambassador Program</strong>.
+  
+  <h4 class="text-center med-h-pads visible-sm">
+    Email us at <span class="highlight">contact@felloeyewear.com</span> to Collaborate
   </h4>
   
   <p class="text-center med-h-pads visible-xs">
-    If you are interested in collaborating in any way please contact us at <span class="highlight">contact@felloeyewear.com</span>.
-    If you want to make some extra money, ask about our <strong>Ambassador Program</strong>.
+    Email us at <span class="highlight">contact@felloeyewear.com</span> to Collaborate
   </p>
 </div>
