--- a/assets/added.js.liquid
+++ b/assets/added.js.liquid
@@ -7,3 +7,7 @@ function sleep(time) {
 $(".pillar .panel.amb").hover(function() {
   $(this).find("h1, h4, p").toggleClass("invisible");
 });
+
+Array.prototype.diff = function(a) {
+  return this.filter(function(i) {return a.indexOf(i) < 0;});
+};
