all in one collection

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -252,6 +252,11 @@ hr.highlight {
   background-size: cover;
   background-position: 70% 35%;
 }
+.shop-classic-banner {
+  background: url("{{ 'collection-classic.jpg' | asset_url }}");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 /* firefox hack*/
 @media (min-width: 992px) {
   #all .clear-for-ff {
