--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -176,7 +176,7 @@
 {% endif %}
     <div class="no-margin med-v-pads charity-hp full-w minor-h-pads">
       <div class="row">
-        <h1 class="text-center">Fight Blindness Together</h1>
+        <h1 class="text-center">Help A Fello Out</h1>
       </div>
 
       <div class="hidden-xs row">
@@ -201,7 +201,7 @@
 
       <div class="row row-eq-height hidden-xs">
         <div class="col-md-3 col-sm-6 col-md-offset-3 v-center">
-          <h1 class="highlight text-right">3043</h1>
+          <h1 class="highlight text-right">3052</h1>
         </div>
 
         <div class="col-md-3 col-sm-6 v-center">
@@ -209,7 +209,7 @@
         </div>
       </div>
       
-      <h2 class="visible-xs text-center"><span class="highlight">3043 </span>Lives Changed</h2>
+      <h2 class="visible-xs text-center"><span class="highlight">3052 </span>Lives Changed</h2>
     </div>
 
 
