--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -535,6 +535,33 @@ hr.highlight {
 .mejs-overlay-error, .mejs-offscreen {
   display: none;
 }
+.odometer-digit {
+  border-radius: 0;
+  background: #000000; /* Old browsers */
+  background: -moz-linear-gradient(top,  #000000 0%, #000000 49%, #ffffff 50%, #000000 51%, #000000 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #000000 0%,#000000 49%,#ffffff 50%,#000000 51%,#000000 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #000000 0%,#000000 49%,#ffffff 50%,#000000 51%,#000000 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+  padding: 25px;
+  margin: 4px;
+  font-size: 44px;
+}
+@media (min-width: 480px) {
+  .count-wrap {
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+}
+@media (max-width: 480px) {
+  .count-wrap {
+    margin-top: 15%;
+    margin-bottom: 15%;
+  }
+}
+.odometer-value {
+  position: relative;
+  top: 5px;
+}
 /* firefox hack*/
 @media (max-width: 768px) {
   .collapse-for-ff {
@@ -1784,7 +1811,7 @@ blockquote.style2:after{
     -moz-box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.17);
     box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.17);
     z-index: 2;
-    min-width: 275px;
+    min-width: 200px;
     padding: 10px 0;
     visibility: hidden;
     opacity: 0;
@@ -1857,7 +1884,7 @@ blockquote.style2:after{
     -moz-box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.17);
     box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.17);
     z-index: 3;
-    min-width: 275px;
+    min-width: 200px;
     padding: 10px 0;
     visibility: hidden;
     opacity: 0;
