--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -170,7 +170,6 @@
 {% include 'product-halfwidth' %}
 
 
-
 {% if settings.use_banner_carousel_home10 %}
 {% include 'shortcode-banner-slide'  %}
 {% endif %}
@@ -198,19 +197,15 @@
           make a difference by contributing <a href="http://www.vosh.org/donate" target="_blank">here</a>.
         </p>
       </div>
-
-      <div class="row row-eq-height hidden-xs">
-        <div class="col-md-3 col-sm-6 col-md-offset-3 v-center">
-          <h1 class="highlight text-right">3052</h1>
-        </div>
-
-        <div class="col-md-3 col-sm-6 v-center">
-          <h1>Lives</h1><h1>Changed</h1>
-        </div>
+      
+      <div class="row text-center count-wrap">
+        <h1 class="highlight my-numbers">Calculating...</h1>
+      </div>
+      <div class="row text-center minor-v-marg">
+        <h1 class="blue">Lives Changed</h1>
       </div>
       
-      <h2 class="visible-xs text-center"><span class="highlight">3052 </span>Lives Changed</h2>
-    </div>
+     </div>
 
 
   	{% include 'header2' with "Instagram" %}
@@ -264,6 +259,29 @@
     </a>
   {% endfor %}
 </div>
+
+{{ 'odometer.js' | asset_url | script_tag }}
+<script>
+  window.odometerOptions = {
+    auto: true, // Don't automatically initialize everything with class 'odometer'
+    selector: '.my-numbers', // Change the selector used to automatically find things to be animated
+    format: 'd', // Change how digit groups are formatted, and how many digits are shown after the decimal point
+    duration: 2000, // Change how long the javascript expects the CSS animation to take
+    theme: 'train-station', // Specify the theme (if you have more than one theme css file on the page)
+    animation: 'count' // Count is a simpler animation method which just increments the value,
+    // use it when you're looking for something more subtle.
+  };
+
+  $(window).scroll(function() {
+    var hT = $('.charity-hp').offset().top,
+        hH = $('.charity-hp').outerHeight(),
+        wH = $(window).height(),
+        wS = $(this).scrollTop();
+    if (wS > (hT+hH-wH-350)){
+      $('.odometer').html(3067);
+    }
+  });
+</script>
 
 <script>
   $(document).ready(function() {
