tweak sold out grid item, recent buy

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -186,6 +186,17 @@ hr.highlight {
 /* End Utilities */
 
 /* Start Footer */
+#recent-buy {
+  position: fixed;
+  left: 1%;
+  bottom: 1%;
+}
+#recent-buy h3 {
+  color: #1fa7d6 !important;
+}
+#recent-buy h5 {
+  color: black;
+}
 .footer .widget {
   text-align: left !important;
 }
